--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,26 +1,6 @@
-<section id="home">
 <!-- Header -->
-  <div class="intro-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="intro-message">
-            <h1>{{ page.title }}</h1>
-            <h3>{{ page.subTitle }}</h3>
-            <hr class="intro-divider">
-            <ul class="list-inline intro-social-buttons">
-              {% for social in site.social %}
-              <li>
-                <a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.icon | default: social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
-              </li>
-              {% endfor %}
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /.container -->
+<div id="jumbotron-header" class="jumbotron-fluid bg-inverse text-white d-flex align-items-center">
+  <div class="container text-center">
+    <h1 class="display-3">{{ page.title }}</h1>
   </div>
-  <!-- /.intro-header -->
-</section>
-
+</div>
