--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,16 +3,16 @@
   <div class="container">
     <ul class="list-inline row text-xs-center">
       <li class="list-inline-item col-xs-12 lead text-uppercase">
-        <a href="#home">Home</a>
+        <a href="#">Home</a>
       </li>
       <li class="list-inline-item col-xs-12">
-        <a href="#about">Conversations</a>
+        <a href="#">Conversations</a>
       </li>
       <li class="list-inline-item col-xs-12">
-        <a href="#posts">Events</a>
+        <a href="#">Events</a>
       </li>
       <li class="list-inline-item col-xs-12">
-        <a href="#contact">People</a>
+        <a href="#">People</a>
       </li>
     </ul>
     <div class="row">
