--- a/css/style.scss
+++ b/css/style.scss
@@ -16,5 +16,5 @@ html, body, #jumbotron-header {
 }
 
 body {
-  font-family: "ATC Arquette Regular", 'Lato', sans-serif;
+  font-family: "ATC Arquette Regular", 'Open Sans', sans-serif;
 }
