switch to https

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
 
   <title>{{ page.title }} - {{ site.title }}</title>
 
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" >
 
