Set conversations.html grids for desktop

--- a/_includes/landing_home.html
+++ b/_includes/landing_home.html
@@ -1,14 +1,22 @@
 <div class="container">
   <div class="row justify-content-center mt-4">
     <div class="col-xs-12 col-md-3 bg-faded d-flex align-items-end pb-3 justify-content-center form-group" style="height: 195px;">
-      <span class="bg-inverse text-white text-center p-3 col-8 hidden-md-down">Conversations</span>
-      <span class="bg-inverse text-white text-center p-3 col-8 hidden-lg-up">Convos</span>
+      <span class="bg-inverse text-white text-center p-3 col-8 hidden-md-down">
+        Conversations
+      </span>
+      <span class="bg-inverse text-white text-center p-3 col-8 hidden-lg-up">
+        Convos
+      </span>
     </div>
     <div class="col-xs-12 col-md-3 offset-md-1 bg-faded d-flex align-items-end pb-3 justify-content-center form-group" style="height: 195px;">
-      <span class="bg-inverse text-white text-center p-3 col-8">Events</span>
+      <span class="bg-inverse text-white text-center p-3 col-8">
+        Events
+      </span>
     </div>
     <div class="col-xs-12 col-md-3 offset-md-1 bg-faded d-flex align-items-end pb-3 justify-content-center form-group" style="height: 195px;">
-      <span class="bg-inverse text-white text-center p-3 col-8">People</span>
+      <span class="bg-inverse text-white text-center p-3 col-8">
+        People
+      </span>
     </div>
   </div>
 </div><!-- /.container -->
