--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <!-- Header -->
 <div id="jumbotron-header" class="jumbotron-fluid bg-inverse text-white d-flex align-items-center">
   <div class="container-fluid text-center">
-    <h1 class="display-3">{{ page.title }}</h1>
+    <h1 class="display-3">
+      {{ page.title }}
+    </h1>
   </div>
 </div>
