--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,14 +1,32 @@
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler navbar-toggler-right"type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">{{ site.title }}</a>
+  <a class="navbar-brand" href="#">
+    {{ site.title }}
+  </a>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="nav navbar-nav">
-      <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Conversations</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">People</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Events</a></li>
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">
+          Home
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="conversations.html">
+          Conversations
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          People
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          Events
+        </a>
+      </li>
     </ul>
   </div><!--/.nav-collapse -->
 </nav>
