--- a/css/style.scss
+++ b/css/style.scss
@@ -10,11 +10,6 @@
 
 // add more css stuff here
 
-html, body, #jumbotron-header {
-  height: 100%;
-  height: 100vh;
-}
+@import 'layouts/global';
 
-body {
-  font-family: "ATC Arquette Regular", 'Open Sans', sans-serif;
-}
+@import 'layouts/converstations';
