media queries supports

--- a/css/layouts/_converstations.scss
+++ b/css/layouts/_converstations.scss
@@ -7,6 +7,14 @@
     margin: 0;
     padding: 0;
 
+    @include old-mobile {
+      height: calc(100vmax - 120px);
+    }
+
+  //  @include table {
+    //  height: calc(100vmax - 300px);
+  //  }
+
     > div {
       border: none;
       margin: 0;
@@ -35,7 +43,7 @@
           margin: 30px 20px;
           padding: 5px 10px 5px 8px;
 
-          >b {
+          > b {
             font-weight: bold;
             font-size: 14px;
           }
@@ -45,10 +53,34 @@
 
     &4x4 {
       height: calc(100% / 3);
+
+      @include old-mobile {
+        height: calc((100vmax - 30px) / 2);
+      }
+
+      @include mobile {
+        height: 50%;
+      }
+
+      @include tablet-portrait {
+        height: 25%;
+      }
     }
 
     &6x6 {
       height: 50%;
+
+      @include old-mobile {
+        height: calc((100vmax - 30px) / 2);
+      }
+
+      @include mobile {
+        height: 50%;
+      }
+
+      @include tablet-portrait {
+        height: 40%;
+      }
     }
 
     &8x8 {
@@ -58,12 +90,44 @@
         bottom: initial;
         top: 0;
       }
+
+      @include old-mobile {
+        .grid-core > a > p {
+          bottom: 0;
+          top: initial;
+        }
+      }
+
+      @include mobile {
+        height: 50%;
+
+        .grid-core > a > p {
+          bottom: 0;
+          top: initial;
+        }
+      }
+
+      @include tablet-portrait {
+        height: 50%;
+      }
     }
 
     &4x8x1 {
       height: calc((100vmax - 30px) / 3);
       border: none;
       padding: 0;
+
+      @include old-mobile {
+        height: calc((100vmax - 30px) / 2);
+      }
+
+      @include mobile {
+        height: calc((100vmax - 30px) / 2);
+      }
+
+      @include tablet-portrait {
+        height: 50%;
+      }
     }
   }
 }
