--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
 
   <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
+  <link rel="shortcut icon" type="image/png" href="img/favicon-32x32.png"/>
+
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" >
 
