--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
         </a>
       </li>
       <li class="list-inline-item col-xs-12">
-        <a href="conversations.html">
+        <a href="/conversations.html">
           Conversations
         </a>
       </li>
