giordon is a moron

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
   <title>{{ page.title }} - {{ site.title }}</title>
 
-  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+  <link rel="canonical" href="{{ site.url }}" />
 
   <link rel="shortcut icon" type="image/png" href="img/favicon-32x32.png"/>
 
