Feature/add convo page (#2)
* Update README

* add gems.lock for local development

* Set conversations.html grids for desktop

* media queries supports

* remove Gemfile.lock

* Fixes - so can get a clean travis

* fixing url config

* update travis in hope it fixes branch issue

* add root

* giordon is a moron

* Revert "update travis in hope it fixes branch issue"

This reverts commit 8f939501b7ccda789dc9f40dbeb6c30a14a7625e.

* typo in travis script

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,24 +3,34 @@
   <div class="container">
     <ul class="list-inline row text-xs-center">
       <li class="list-inline-item col-xs-12 lead text-uppercase">
-        <a href="#">Home</a>
+        <a href="index.html">
+          Home
+        </a>
       </li>
       <li class="list-inline-item col-xs-12">
-        <a href="#">Conversations</a>
+        <a href="/conversations.html">
+          Conversations
+        </a>
       </li>
       <li class="list-inline-item col-xs-12">
-        <a href="#">Events</a>
+        <a href="#">
+          Events
+        </a>
       </li>
       <li class="list-inline-item col-xs-12">
-        <a href="#">People</a>
+        <a href="#">
+          People
+        </a>
       </li>
     </ul>
     <div class="row">
       <div class="col-xs-6">
-        <p class="copyright text-muted small">{{ site.copyright }}</p>
+        <p class="copyright text-muted small">
+          {{ site.copyright }}
+        </p>
       </div>
       <div class="col-xs-6">
-            {{ site.credits }}
+        {{ site.credits }}
       </div>
     </div>
   </div>
