--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
   <div class="container">
     <ul class="list-inline row text-xs-center">
       <li class="list-inline-item col-xs-12 lead text-uppercase">
-        <a href="index.html">
+        <a href="/">
           Home
         </a>
       </li>
       <li class="list-inline-item col-xs-12">
-        <a href="/conversations.html">
+        <a href="/conversations">
           Conversations
         </a>
       </li>
