--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,12 +8,12 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="nav navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="/">
           Home
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="conversations.html">
+        <a class="nav-link" href="/conversations">
           Conversations
         </a>
       </li>
