--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,54 +2,73 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 text-center">
+      <div class="col-12 text-center">
         <h1 class="font-weight-bold">DeafChi</h1>
       </div>
-      <div class="col-sm-12 text-center">
+      <div class="col-12 text-center">
         <ul class="list-inline">
         {% for social in site.social %}
           <li class="list-inline-item">
             <a href="{{social.url}}">
-              <i class="text-muted fa fa-{{social.icon}} fa-2x"></i>
+              <i class="text-muted fa fa-{{social.icon}} fa"></i>
               <span class="sr-only">{{social.name}}</span>
             </a>
           </li>
         {% endfor %}
         </ul>
       </div>
-    </div>
-    <div class="col-sm-12 text-center">
-      <ul class="list-inline">
-        <li class="list-inline-item lead text-uppercase">
-          <a href="/">
-            Home
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a href="/conversations">
-            Conversations
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">
-            Events
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">
-            People
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="row">
-      <div class="col-xs-6">
+      <div class="col-12 text-center">
+        <ul class="list-unstyled">
+          <li class="col-12 lead text-uppercase font-weight-bold">
+            <a href="/">
+              Home
+            </a>
+          </li>
+          <li class="col-12">
+            <a href="/conversations">
+              Conversations
+            </a>
+          </li>
+          <li class="col-12">
+            <a href="#">
+              Events
+            </a>
+          </li>
+          <li class="col-12">
+            <a href="#">
+              People
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 text-center">
+        <ul class="list-unstyled">
+          <li class="col-12 lead text-uppercase font-weight-bold">
+            <a href="#">
+              Information
+            </a>
+          </li>
+          <li class="col-12">
+            <a href="#">
+              Our Story
+            </a>
+          </li>
+          <li class="col-12">
+            <a href="#">
+              Get Involved
+            </a>
+          </li>
+          <li class="col-12">
+            <a href="#">
+              Contact Us
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 text-center">
         <p class="copyright text-muted small">
           {{ site.copyright }}
         </p>
-      </div>
-      <div class="col-xs-6">
-        {{ site.credits }}
       </div>
     </div>
   </div>
