--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,9 @@
 <!-- Footer -->
 <footer>
   <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
+    <div class="row text-center text-md-left">
+      <div class="col-12 col-md-3">
         <h1 class="font-weight-bold">DeafChi</h1>
-      </div>
-      <div class="col-12 text-center">
         <ul class="list-inline">
         {% for social in site.social %}
           <li class="list-inline-item">
@@ -17,7 +15,7 @@
         {% endfor %}
         </ul>
       </div>
-      <div class="col-12 text-center">
+      <div class="col-12 col-md-3">
         <ul class="list-unstyled">
           <li class="col-12 lead text-uppercase font-weight-bold">
             <a href="/">
@@ -41,7 +39,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-12 text-center">
+      <div class="col-12 col-md-3">
         <ul class="list-unstyled">
           <li class="col-12 lead text-uppercase font-weight-bold">
             <a href="#">
