--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
     {{ site.title }}
   </a>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav text-right pr-3">
       <li class="nav-item active">
         <a class="nav-link" href="/">
           Home
