--- a/css/layouts/_global.scss
+++ b/css/layouts/_global.scss
@@ -4,7 +4,7 @@ html, body, #jumbotron-header {
 }
 
 body {
-  font-family: "ATC Arquette Regular", 'Open Sans', sans-serif;
+  font-family: "ATC Arquette", 'Open Sans', sans-serif;
 }
 
 body > .container {
