revised based on feedback and improved some code structure and media queries

--- a/css/layouts/_global.scss
+++ b/css/layouts/_global.scss
@@ -10,3 +10,10 @@ body {
 body > .container {
   margin-top: 100px;
 }
+
+// weird bootstrap bug where was adding extra margin-right making page scrollable to right
+.row {
+  @include mobile {
+    margin-right: 0;
+  }
+}
