--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,13 +9,13 @@
 
   <link rel="canonical" href="{{ site.url }}" />
 
-  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/img/favicon-32x32.png"/>
+  <link rel="shortcut icon" type="image/png" href="/img/favicon-32x32.png"/>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" >
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css" >
+  <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-  <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
 </head>
