--- a/_includes/header_interview_detail.html
+++ b/_includes/header_interview_detail.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <div id="interview-header" class="container-fluid">
   <div class="row">
-    <div id="photo" class="col-md-8" style="background-image: url(photos/{{ page.photo.path }});">
+    <div id="photo" class="col-md-8" style="background-image: url(/conversations/photos/{{ page.photo.path }});">
     </div>
     <div id="detail" class="col-md-4">
       <p class="h2">
@@ -22,6 +22,11 @@
         {% if page.social.instagram != '' and page.social.instagram != nil  %}
           <li>
             <a href="https://www.instagram.com/{{ page.social.instagram }}">Instagram</a>
+          </li>
+        {% endif %}
+        {% if page.social.github != '' and page.social.github != nil  %}
+          <li>
+            <a href="https://github.com/{{ page.social.github }}">Github</a>
           </li>
         {% endif %}
         {% if page.social.website != '' and page.social.website != nil  %}
