--- a/_layouts/interview.html
+++ b/_layouts/interview.html
@@ -4,7 +4,7 @@
 
   <body>
     {% include navigation.html %}
-    {% include header_bio.html %}
+    {% include header_interview_detail.html %}
     {% include page_interview.html %}
     {% include footer.html %}
   </body>
