--- a/css/_meta-queries.scss
+++ b/css/_meta-queries.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin mobile {
-  @media only screen and (min-device-width : 375px) and (max-device-width : 759px) {
+  @media only screen and (max-device-width : 759px) {
     @content;
   }
 }
