--- a/css/layouts/_interview.scss
+++ b/css/layouts/_interview.scss
@@ -2,15 +2,16 @@
   &-header {
     margin: 70px 0;
 
+    @include mobile {
+      padding-right: 0;
+    }
+
     > .row {
       > #photo {
         background-size: cover;
         background-position: center;
         height: 500px;
 
-        @include old-mobile {
-          max-height: 350px;
-        }
         @include mobile {
           max-height: 350px;
         }
@@ -22,9 +23,6 @@
         padding: 25px 20px;
         font-weight: 100;
 
-        @include old-mobile {
-          text-align: center;
-        }
         @include mobile {
           text-align: center;
         }
@@ -39,10 +37,6 @@
           text-align: left;
           margin-left: 0;
 
-          @include old-mobile {
-            text-align: center;
-            margin-left: auto;
-          }
           @include mobile {
             text-align: center;
             margin-left: auto;
@@ -60,17 +54,11 @@
             font-weight: 500;
             margin-top: 20px;
 
-            @include old-mobile {
-              margin-bottom: 14px;
-            }
             @include mobile {
               margin-bottom: 14px;
             }
           }
 
-          @include old-mobile {
-            margin-bottom: 18px;
-          }
           @include mobile {
             margin-bottom: 18px;
           }
@@ -90,9 +78,6 @@
                 color: $white;
                 margin: 10px 0;
 
-                @include old-mobile {
-                  display: initial;
-                }
                 @include mobile {
                   display: initial;
                 }
@@ -102,9 +87,6 @@
                 }
               }
 
-              @include old-mobile {
-                display: inline-block;
-              }
               @include mobile {
                 display: inline-block;
               }
@@ -123,9 +105,6 @@
             margin-top: 2px;
           }
 
-          @include old-mobile {
-            position: static;
-          }
           @include mobile {
             position: static;
           }
@@ -138,9 +117,6 @@
     max-width: 800px;
     margin-top: 25px;
 
-    @include old-mobile {
-      padding: 0;
-    }
     @include mobile {
       padding: 0;
     }
@@ -148,9 +124,6 @@
     #top-section {
       margin: 0 75px 25px;
 
-      @include old-mobile {
-        margin: 0;
-      }
       @include mobile {
         margin: 0;
       }
@@ -163,10 +136,6 @@
       #summary {
         line-height: 26px;
 
-        @include old-mobile {
-          font-size: 14px;
-          margin-bottom: 20px;
-        }
         @include mobile {
           font-size: 14px;
           margin-bottom: 20px;
@@ -179,10 +148,6 @@
         margin: 0 75px 24px;
         line-height: 32px;
 
-        @include old-mobile {
-          margin-left: 15px;
-          margin-right: 15px;
-        }
         @include mobile {
           margin-left: 15px;
           margin-right: 15px;
