add interview page with collections (#9)
* add interview page

* revised based on feedback and improved some code structure and media queries

--- a/_includes/component_grid_core.html
+++ b/_includes/component_grid_core.html
@@ -1,4 +1,4 @@
-<div class="grid-core" style="background-image: url(img/{{ include.data.id }}.png);">
+<div class="grid-core" style="background-image: url(/img/{{ include.data.id }}.png);">
   <!-- TODO: remove proofer ignore once we have real url -->
   <a data-proofer-ignore href="/{{ include.data.id }}">
     <p>
